--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.14.0",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
     "cors": "^2.8.1",
+    "crypto": "0.0.3",
     "express": "^4.14.1",
+    "fs-plus": "^2.9.3",
     "lodash": "^4.17.4",
     "method-override": "^2.3.7",
     "moment": "^2.17.1",
