--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "imgsvc",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "aws-sdk": "^2.14.0",
-    "bluebird": "^3.4.7",
-    "body-parser": "^1.16.1",
-    "cors": "^2.8.1",
-    "crypto": "0.0.3",
-    "express": "^4.14.1",
-    "fs-plus": "^2.9.3",
-    "lodash": "^4.17.4",
-    "method-override": "^2.3.7",
-    "moment": "^2.17.1",
-    "morgan": "^1.8.1",
-    "sharp": "^0.17.2"
-  }
+    "name": "imgsvc",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nf start"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "aws-sdk": "^2.14.0",
+        "bluebird": "^3.4.7",
+        "body-parser": "^1.16.1",
+        "cors": "^2.8.1",
+        "crypto": "0.0.3",
+        "express": "^4.14.1",
+        "fs-plus": "^2.9.3",
+        "lodash": "^4.17.4",
+        "method-override": "^2.3.7",
+        "moment": "^2.17.1",
+        "morgan": "^1.8.1",
+        "sharp": "^0.17.2"
+    }
 }
